// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingLogo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo euiLoadingLogo--medium testClass1 testClass2 css-1p1obsq-euiLoadingLogo-m"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="css-vpqaeu-euiLoadingLogo__icon-m"
    data-euiicon-type="logoKibana"
  />
</span>
`;

exports[`EuiLoadingLogo logo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo euiLoadingLogo--medium testClass1 testClass2 css-1p1obsq-euiLoadingLogo-m"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="css-vpqaeu-euiLoadingLogo__icon-m"
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingLogo size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo euiLoadingLogo--large css-rtjevd-euiLoadingLogo-l"
  role="progressbar"
>
  <span
    class="css-13j96yi-euiLoadingLogo__icon-l"
    data-euiicon-type="logoKibana"
  />
</span>
`;

exports[`EuiLoadingLogo size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo euiLoadingLogo--medium css-1p1obsq-euiLoadingLogo-m"
  role="progressbar"
>
  <span
    class="css-vpqaeu-euiLoadingLogo__icon-m"
    data-euiicon-type="logoKibana"
  />
</span>
`;

exports[`EuiLoadingLogo size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo euiLoadingLogo--xLarge css-vmvkmp-euiLoadingLogo-xl"
  role="progressbar"
>
  <span
    class="css-tt9ufr-euiLoadingLogo__icon-xl"
    data-euiicon-type="logoKibana"
  />
</span>
`;
